find nodes by story